GIT html and image INITIAL
1. GIT.html - initial commit
2. GIT_Desktop_Diff image added
3. <hr> added to look pretty

--- a/programming/Version_Control.html
+++ b/programming/Version_Control.html
@@ -73,14 +73,14 @@
 		<TD valign="top" bgcolor="#EDEDED"><BR>
 		<font face="Helvetica">
 			<h4>
-			<a href="./Calculator/Winform_Calculator.html">Click to view the post</a>
+			<a href="./GIT/GIT.html">Click to view the post</a>
 			</h4>
 			
 			<h5>
 				<ol>
 					<p><li>Environment Setup - Web and/or Desktop</li></p>
-					<p><li>Follow</li></p>
-					<p><li>Function Coding - Basic C# Programming</li></p>
+					<p><li>Commit/Revert Changes</li></p>
+					<p><li>Branch/Publish Works</li></p>
 				</ol>				
 			</h5>
 			</font>
