Programming Reference - Initial
1. Initial Commit of Programming Reference - See the List

--- a/programming/Algorithm.html
+++ b/programming/Algorithm.html
@@ -35,7 +35,7 @@
 	</ul>
 	</nav>	
 	
-		<h2 ID="Article">Version Control Program</h2>
+		<h2 ID="Article">Algorithm</h2>
 		
 	<nav id="leftMenu">		
 		<ul>
@@ -52,13 +52,15 @@
 	<SECTION ID="Wrapper"> 
 	<article>
 	<p>
-	A component of software configuration management, version control, also known as revision control or source control, is the 
-	management of changes to documents, computer programs, large web sites, and other collections of information (*by Wikipedia).
-	Here we deal the two most popular version control softwares: GIT and SVN.
+	Dynamic Programming<br><br>
+	Brutal Force<br><br>
+	Depth First Search(DFS)<br><br>
+	Breadth First Search(BFS)<br><br>
+	Participating Online competition<br><br>
 	</p>
-	<p> All source files in this website are under control of GIT. This means we could keep track of changes in a file and revert back
-	any mistakes to older versions. It removes the necessity of copying backup zips every time I make changes. It also helps other 
-	users commit their changes to the source file for collaboration.
+	<p> Template Template Template Template Template Template Template Template 
+	Template Template Template Template Template Template Template Template Template 
+	Template Template Template Template Template Template Template Template Template Template
 	</article>
 	
 	<nav id="topMenu"> 
@@ -66,7 +68,7 @@
 	
 	<TR> 
 		<TD valign="top" width="90" rowspan="2">&nbsp;</TD>
-		<TD valign="middle" bgcolor="#339933" height="20" class="header" colspan="2"><font face="Helvetica"><b>1. GIT</b></font></TD>
+		<TD valign="middle" bgcolor="#339933" height="20" class="header" colspan="2"><font face="Helvetica"><b>TEMPLATE</b></font></TD>
 		<TD width="50" valign="top">&nbsp;</TD>
 	</TR>
 	
@@ -75,14 +77,14 @@
 		<TD valign="top" bgcolor="#EDEDED"><BR>
 		<font face="Helvetica">
 			<h4>
-			<a href="./GIT/GIT.html">Click to view the post</a>
+			<a href="Template.html">Click to view the post</a>
 			</h4>
 			
 			<h5>
 				<ol>
-					<p><li>Environment Setup - Web and/or Desktop</li></p>
-					<p><li>Commit/Revert Changes</li></p>
-					<p><li>Branch/Merge Works</li></p>
+					<p><li>Template Template Template Template Template</li></p>
+					<p><li>Template Template Template Template Template</li></p>
+					<p><li>Template Template Template Template Template</li></p>
 				</ol>				
 			</h5>
 			</font>
