--- a/programming/GIT/GIT.html
+++ b/programming/GIT/GIT.html
@@ -89,10 +89,10 @@
 	on master branch (by default), we can select any other branch and publish branch (commit to master).</p>
 		
 	<hr>
-	<h3>Trouble Shootings</h3>
-	<li>Button value is string. Needs conversion to double for mathematic operations -> Double.Parse, ToString()</li>
-	<li>Clicking operator twice cracks the program -> Handles as exception</li>
-	<li>Prevent first digit 0 numbers such as 90 or 0053 -> Handles as exception</li>
+	<h3>Tips</h3>
+	<li>Delete the branch once merged to master</li>
+	<li>Write comments in detail using figures such as "-" and "*" along with words "Initial" and "Completed"</li>
+	
 	
 	
 	</SECTION>
