--- a/project.html
+++ b/project.html
@@ -34,14 +34,31 @@
 		<li><a class="menuLink" href="contact.html">Contact</a></li>
 	</ul>
 	</nav>	
-
-	<h2>Project Portfolio</h2>
-	It will be updated soon.<br><br>
-	<li>Test Engineering</li>
-	<li>Computer Architecture</li>
-	<li>Winform in C#</li>
-	<li>Web Programming:HTML, CSS</li>
-	<li>Web Service: Google Console Service to host web.</li>
+		
+	
+		<h2 ID="Article">Project Portfolio</h2>
+		
+	<nav id="leftMenu">		
+		<ul>
+			<li><a href="./programming/template.html">Test Engineering</a></li>
+			<li><a href="./programming/template.html">Computer Architecture</a></li>
+			<li><a href="./programming/template.html">RF and PA</a></li>
+			<li><a href="./programming/template.html">Pipelined CPU</a></li>
+			<li><a href="./programming/template.html">OTA</a></li>
+		</ul>
+	</nav>
+	<article>
+	<p>It will be updated soon.</p>
+	<p>This page is intended to show details of projects listed in resume.</p><br>
+	
+	<li>Test Engineering at Cypress --- ATE manipulation and its principle: Nextest ATE, wafer, furnace</li><br>
+	<li>Computer Architecture at Cypress and USC --- its principle: FLASH, SRAM, USB, GPIO, IMO and I2C</li><br>
+	<li>How RF and PA work --- its principle: Signal transmitter/receiver, performance optimization</li><br>
+	<li>Designing 5 stage pipelined CPU --- transitor level and layout</li><br>
+	<li>Designing a Operational Transconductance Amplifier(OTA) --- 40nm transistor level simulation with 60dB gain</li><br>	
+	</article>
+	
+	
 
 </body>	
 </html>
