--- a/programming.html
+++ b/programming.html
@@ -40,7 +40,9 @@
 	<nav id="leftMenu">		
 		<ul>
 			<li><a href="./programming/Winform.html">Winform</a></li>
-			<li><a href="./programming/ASP_NET.html">ASP.NET</a></li>
+			<li><a href="./programming/Web_Service.html">Web Service</a></li>
+			<li><a href="./programming/Design_Web.html">How to Design a Website</a></li>
+			<li><a href="./programming/Host_Web.html">How to Host a Website</a></li>
 			<li><a href="./programming/Algorithm.html">Algorithm Study</a></li>
 			<li><a href="./programming/Data_Structure.html">Data Structure</a></li>
 			<li><a href="./programming/Version_Control.html">Version Control Program</a></li>
