Basic UI Winform - Initial Commit
1. Initial Commit
2. Grammar change to other files.

--- a/programming/Winform.html
+++ b/programming/Winform.html
@@ -82,6 +82,37 @@
 			</font>
 		</TD>		
     </TR>
+	
+	<TR> 
+		<TD height="20" colspan="4" valign="top">&nbsp;</TD>
+	</TR>
+	
+	<TR> 
+		<TD valign="top" width="90" rowspan="2">&nbsp;</TD>
+		<TD valign="middle" bgcolor="#339933" height="20" class="header" colspan="2"><font face="Helvetica"><b>2. C# UI Basic</b></font></TD>
+		<TD width="50" valign="top">&nbsp;</TD>
+	</TR>
+	
+	<TR> 
+		<TD valign="top" height="189" bgcolor="#EDEDED">&nbsp;</TD>
+		<TD valign="top" bgcolor="#EDEDED"><BR>
+		<font face="Helvetica">
+			<h4>
+			<a href="./Basic_UI/Basic_UI_Winform.html">Click to view the post</a>
+			</h4>
+			
+			<h5>
+				<ol>
+					<p><li>Textbox Input, MessageBox, Type Casting</li></p>
+					<p><li>Menu, Submenu, FileDialog</li></p>
+					<p><li>Box, Radio Button</li></p>					
+				</ol>				
+			</h5>
+			</font>
+		</TD>		
+    </TR>
+	
+	
 	</table>
 	</nav>
 	</SECTION>
