--- a/programming/Calculator/Winform_Calculator.html
+++ b/programming/Calculator/Winform_Calculator.html
@@ -40,7 +40,9 @@
 	<nav id="leftMenu">		
 		<ul>
 			<li><a href="../Winform.html">Winform</a></li>
-			<li><a href="../ASP_NET.html">ASP.NET</a></li>
+			<li><a href="../Web_Service.html">Web Service</a></li>
+			<li><a href="../Design_Web.html">How to Design a Website</a></li>
+			<li><a href="../Host_Web.html">How to Host a Website</a></li>
 			<li><a href="../Algorithm.html">Algorithm Study</a></li>
 			<li><a href="../Data_Structure.html">Data Structure</a></li>
 			<li><a href="../Version_Control.html">Version Control Program</a></li>
@@ -52,7 +54,7 @@
 	<h3>Why calculator?</h3>
 	<p>
 	It is a great example to get familiar with Visual Studio and its Winform platform. 
-	All you need is basic programming knowledges such as making functions and calling variables.
+	All you need are basic programming knowledges such as making functions and calling variables.
 	Once you get used to the drag and drop interface & on-click trigger, VS takes care of anything else.
 	</p>
 	<p align="center"><a href="/MyCalculator.zip" target="_blank">Click to download Source File</a></p>
@@ -76,7 +78,7 @@
 	<h3>Trouble Shootings</h3>
 	<li>Button value is string. Needs conversion to double for mathematic operations -> Double.Parse, ToString()</li>
 	<li>Clicking operator twice cracks the program -> Handles as exception</li>
-	<li>Prevent first digit 0 numbers such as 90 or 0053 -> Handles as exception</li>
+	<li>Prevent first digit 0 numbers such as 090 or 0053 -> Handles as exception</li>
 	
 	
 	</SECTION>
