Left Menu Sequence Change
1. Sequence change.
Version control ascended

--- a/programming/Basic_UI_Winform/Basic_UI_Winform.html
+++ b/programming/Basic_UI_Winform/Basic_UI_Winform.html
@@ -40,12 +40,12 @@
 	<nav id="leftMenu">		
 		<ul>
 			<li><a href="../Winform.html">Winform</a></li>
+			<li><a href="../Version_Control.html">Version Control Program</a></li>
 			<li><a href="../Web_Service.html">Web Service</a></li>
 			<li><a href="../Design_Web.html">How to Design a Website</a></li>
 			<li><a href="../Host_Web.html">How to Host a Website</a></li>
 			<li><a href="../Algorithm.html">Algorithm Study</a></li>
 			<li><a href="../Data_Structure.html">Data Structure</a></li>
-			<li><a href="../Version_Control.html">Version Control Program</a></li>
 		</ul>
 	</nav>
 	
@@ -113,7 +113,7 @@
 	<p>".Chcked" is used here as well. The first line of code works as a switch. 
 	When this item menu is clicked(event), checked flag toggles its status.
 	<p align="center">
-	<a href="./Basic_UI_Winform.exe">Download MyCalculator.exe</a></li>
+	<a href="./Basic_UI_Winform.exe">Download Basic_UI_Winform.exe</a></li>
 	</p>
 	
 	<hr>
@@ -121,8 +121,8 @@
 	
 	<h3>Trouble Shootings</h3>
 	<li>For textbox inputs whose types are not numeric, exception handler is needed.</li>
-	<li>Clicking operator twice cracks the program -> Handles as exception</li>
-	<li>Prevent first digit 0 numbers such as 090 or 0053 -> Handles as exception</li>
+	<li>Use float instead of int for accuracy. Consider (int) (double) type casting.</li>
+	
 	
 	
 	</SECTION>
