--- a/programming/Basic_UI_Winform/Basic_UI_Winform.html
+++ b/programming/Basic_UI_Winform/Basic_UI_Winform.html
@@ -96,8 +96,8 @@
 	
 	<hr>
 	<p>Radio Button and CheckBox are typical interfaces for user selection. They are commonly used in user profile creation when you
-	sign up in a website. You can drag and pull from toolBox to your preferred location. It is always better to group the boxes using
-	groupBox to change property together.</p>
+	sign up in a website. You can drag and pull from toolBox to your preferred location. It is always better to group the boxes and buttons
+	using groupBox to modify their property together.</p>
 	<p style="text-align:center"><img alt="" height="262" src="buttonMenu_Survey.png" width="630" /></p>	
 	<p>Only one radio button item in a groupBox can be selected. However, checkedBox are there for multiple selections. Use proper
 	input interface for your purpose. Here's a part of button function. ".Checked" handles you checked items. MessageBox is
