--- a/about_me.html
+++ b/about_me.html
@@ -57,7 +57,18 @@
 			</font>
 		</TD>		
     </TR>
+	</table>
 	
+	<nav id="topMenu"> 
+	<table border="0" cellpadding="0" cellspacing="0" width="800">
+	
+	<TR> 
+		<TD valign="top" width="90" rowspan="2">&nbsp;</TD>
+		<TD valign="middle" bgcolor="#339933" height="20" class="header" colspan="2"><font face="Helvetica"><b>#Tag Details</b></font></TD>
+		<TD width="50" valign="top">&nbsp;</TD>
+	</TR>
+	
+	<p style="text-align:center"><img alt="" height="630" src="profile.png" width="630" border="3"/></p>
 	
 	<TR> 
 		<TD height="20" colspan="4" valign="top">&nbsp;</TD>
@@ -75,11 +86,11 @@
 			Were you a good boy?<br><br>
 			</h4>
 			<h5>
-			> Born in a blessed country, South Korea in 1988.<br><br>
-			> Loved by many relatives in my youth.<br><br>
+			> Born in an amazing family in South Korea.<br><br>
+			> Loved by many relatives in youth.<br><br>
 			> Energetic to hang outside playing soccer all the time and a member of city team.<br><br>
-			 (Wish I read more books to explore other worlds :D)<br><br>
-			> Responsible kid, taking class presidents every year 8th-12th grades.<br><br>
+			 (Wish I read more books to explore other worlds too :D)<br><br>
+			> Responsible student, taking class president positions every year 8th-12th grades.<br><br>
 			> Made a life-changing decision to study abroad after graduating high school.<br><br>
 			</h5>
 		</font>
@@ -102,7 +113,7 @@
 			What made you to decide study abroad?<br><br>
 			</h4>
 			<h5>
-			> Wanted to challenge myself to my personal limit. (Appreciate family support)<br><br>			
+			> Wanted to challenge myself to my personal limit. (Appreciate support from family)<br><br>			
 			> Two years in Boston for ESL, TOEFL and SAT test prep.<br><br>
 			> Four years in Atlanta for undergraduate education in Electrical Engineering.<br><br>
 			> Two years in Los Angeles for master degree in EE.<br><br>
@@ -129,7 +140,7 @@
 			Why did you choose engineering major?<br><br>
 			</h4>
 			<h5>
-			> Loved and had interests in math and physics. (Electricity part only)<br><br>
+			> Loved and had interests in math and physics. (Electricity part only :p)<br><br>
 			> Fascinated by RF nature how machines communicate over the distance. (RF research and internship)<br><br>
 			> How come a nail-sized chip can handle so many logics in one second? (Computer Architecture)<br><br>
 			> Designing programs for automatic test equipment to verify defects. (Test Engineer)<br><br>
@@ -155,8 +166,8 @@
 			Still unbelievable I am MARRIED.<br><br>
 			</h4>
 			<h5>
-			> Parents introduced me a girl who is in Lousiana as a medical student.<br><br>
-			> Considered as a joke at first and refused to meet her.<br><br>
+			> Parents introduced me a girl who is in Lousiana and is a medical student.<br><br>
+			> Considered as a joke at first and refused to meet her due to long distance.<br><br>
 			> 8 hour flight distance from Seattle to Shreveport to meet her finally.<br><br>
 			> You know what. I liked her and proposed marriage after meeting 3 times.<br><br>
 			> Moved to Shreveport to raise a family.<br><br>
@@ -182,10 +193,11 @@
 			Imagine you are given months of free vacations.<br><br>
 			</h4>
 			<h5>
-			> Months of free time given due to new visa application, relocation and job searching.<br><br>
-			> It did take time to enjoy free time and leisure.<br><br>
+			> Months of free time given due to visa status change, relocation and job searching.<br><br>
+			> It did take time and effort that I am able to enjoy free time and leisure.<br><br>
 			> Started studying algorithms and data structure in online competition forum.<br><br>
-			> Picked up basics of Python, PHP, HTML and CSS. (See programming reference menu)<br><br>			
+			> Picked up basics of C#, Python, PHP, HTML and CSS. (See programming reference menu)<br><br>			
+			> Exploring various SW engineering areas such as C# .NET Winform and Web technology.<br><br>			
 			</h5>
 		</font>
 		</TD>		
@@ -208,10 +220,10 @@
 			Where am I heading now?<br><br>
 			</h4>
 			<h5>
-			> Many people, I feel, work to make money for their own lives. (Not bad)<br><br>
+			> Many people, I feel, work to make money for their own lives. (Nothing wrong, it's okay)<br><br>
 			> Not brave enough to leave their safety zones and accept new challenges.<br><br>
 			> The purpose of engineering is to make lives significantly better with technologies.<br><br>
-			> YOLO, I wish my life and time would achieve the purpose of engineering as I define.<br><br>
+			> YOLO, I wish that my life and time would be devoted to achieve the purpose of engineering.<br><br>
 			</h5>
 		</font>
 		</TD>		
