--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 			<li>Current Location : Shreveport, LA</li><br><br>
 			<li>Relocation possible without assistance.</li><br><br>
 			<li>Able to work without any VISA sponsorship.</li><br><br>
-			<li>Looking for Engineering Jobs in Shreveport and Dallas</li><br><br>
+			<li>Looking for Engineering Jobs in Shreveport or Dallas.</li><br><br>
 			<li>Job interests: Test Engineering, Software/Web Developer. Data Analyst.</li><br><br>
 			<br><br>
 			
@@ -68,6 +68,8 @@
     </TR>
 	</nav>
 	</table>
+	
+	<div class="margin50"></div>
 	
 	
 </body>	
