--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 	</ul>
 	</nav>	
 	
+	<p><object align="right">Blog Created on July 2017</object></p>
+			
+	
 	<h2> </h2>
 	
 	
@@ -56,9 +59,10 @@
 			Welcome to youngseoklee.com<br><br><br><br>
 			</h4>
 			<h5>
-			This website was created based on HTML and CSS - Static web hosting.<br><br>
+			This website was manually created using HTML and CSS - Static web hosting.<br><br>
 			It will be accessible from anywhere to the information I consider valuable.<br><br>		
-			Two main purposes of this web as follows: 1. autobiographical  2. career<br><br>
+			Two main purposes of this web as follows: 1. autobiographical  2. career<br><br><br>
+			>>> Please Select proper Menu Tab <<<<br>
 			</h5>
 			</font>
 		</TD>		
