--- a/programming.html
+++ b/programming.html
@@ -48,11 +48,17 @@
 			<li><a href="./programming/Data_Structure.html">Data Structure</a></li>
 		</ul>
 	</nav>
-	<article>
-	<p>This collection serves as memo, memory-keeping what I have explored other fields.</p>
-	<p>Please choose item on left tab menu.</p>
-	</article>
 	
+<div class="bodyCenter">	
+	<article>
+	<p>This collection serves as memo, memory-keeping documents what I have explored in other fields.</p>	
+	<p>Postings will describe software engineering topics in depth, yet concise.</p>
+	<p>Please email me for suggestions or clarifications. </p>
+	<p><h3>Please choose item on left tab menu.</h3></p>
+	
+	<p style="text-align:center"><img alt="" height="533" src="programming.jpg" width="800" /></p>
+	</article>
+</div>	
 
 </body>	
 </html>
