--- a/programming/Basic_UI_Winform/Basic_UI_Winform.html
+++ b/programming/Basic_UI_Winform/Basic_UI_Winform.html
@@ -52,6 +52,7 @@
 	<SECTION ID="Wrapper"> 
 	<article>
 	<h3>Winform Basic User Interface(UI)</h3>
+	<div align="right"><h6>Updated on September 1st, 2017</h6></div>
 	<p>
 	This post deals with basic user interface components and their functional implementations with C# programming.
 	All UI objects are in design screen and they have distinct names you can call to play around. 
@@ -82,7 +83,7 @@
 	<hr>
 	
 	<p>What if we want to add menu bar on the program?
-	<p style="text-align:center"><img alt="" height="632" src="menuStrip.png" width="885" /></p>
+	<p style="text-align:center"><img alt="" height="571" src="menuStrip.png" width="800" /></p>
 	<p>Select MenuStrip from toolBox and it will be added. Type to add any menuItem. Menuitem name "-" is reserved for menu divider line.
 	You can assign keyboard Shortcuts to menus in properties.
 	<p style="text-align:center"><img alt="" height="414" src="keyboardShortCut.png" width="303" /></p>	
@@ -92,7 +93,7 @@
 	<p style="text-align:center"><img alt="" height="427" src="openFileDialog.png" width="680" /></p>
 	<p>An additional selection screen for openFileDialog will pop up. You can configure its properties such as title, filename and filters with "text|*.extension".
 	Asterisk "*" means all. Therefore *.jpg means filtering out any file name with extension .jpg.</p>
-	<p style="text-align:center"><img alt="" height="252" src="openFD_method.png" width="987" /></p>
+	<p style="text-align:center"><img alt="" height="204" src="openFD_method.png" width="800" /></p>
 	
 	<hr>
 	<p>Radio Button and CheckBox are typical interfaces for user selection. They are commonly used in user profile creation when you
