--- a/programming/Calculator/Winform_Calculator.html
+++ b/programming/Calculator/Winform_Calculator.html
@@ -52,6 +52,7 @@
 	<SECTION ID="Wrapper"> 
 	<article>
 	<h3>Why calculator?</h3>
+	<div align="right"><h6>Updated on July 28th, 2017</h6></div>
 	<p>
 	It is a great example to get familiar with Visual Studio and its Winform platform. 
 	All you need are basic programming knowledges such as making functions and calling variables.
