--- a/programming/GIT/GIT.html
+++ b/programming/GIT/GIT.html
@@ -52,6 +52,7 @@
 	<SECTION ID="Wrapper"> 
 	<article>
 	<h3>Why GIT?</h3>
+	<div align="right"><h6>Updated on Aug 29th, 2017</h6></div>
 	
 	<p>
 	GIT is the most powerful and popular version control software.<br>
