--- a/project.html
+++ b/project.html
@@ -35,30 +35,33 @@
 	</ul>
 	</nav>	
 		
-	
+
 		<h2 ID="Article">Project Portfolio</h2>
 		
 	<nav id="leftMenu">		
 		<ul>
-			<li><a href="./programming/template.html">Test Engineering</a></li>
-			<li><a href="./programming/template.html">Computer Architecture</a></li>
-			<li><a href="./programming/template.html">RF and PA</a></li>
-			<li><a href="./programming/template.html">Pipelined CPU</a></li>
-			<li><a href="./programming/template.html">OTA</a></li>
+			<li><a href="./project/[CYPRESS]_Test_Engineering.pdf">Test Engineering</a></li>
+			<li><a href="./project/template.html">Computer Architecture</a></li>
+			<li><a href="./project/template.html">RF and PA</a></li>
+			<li><a href="./project/template.html">Pipelined CPU</a></li>
+			<li><a href="./project/template.html">OTA</a></li>
 		</ul>
 	</nav>
+	
+<div class="bodyCenter">	
+
 	<article>
 	<p>It will be updated soon.</p>
 	<p>This page is intended to show details of projects listed in resume.</p><br>
 	
 	<li>Test Engineering at Cypress --- ATE manipulation and its principle: Nextest ATE, wafer, furnace</li><br>
 	<li>Computer Architecture at Cypress and USC --- its principle: FLASH, SRAM, USB, GPIO, IMO and I2C</li><br>
-	<li>How RF and PA work --- its principle: Signal transmitter/receiver, performance optimization</li><br>
+	<li>How RF and PA work --- its principle: Signal transmitter/receiver, performance optimization, Doherty Amplifier</li><br>
 	<li>Designing 5 stage pipelined CPU --- transitor level and layout</li><br>
-	<li>Designing a Operational Transconductance Amplifier(OTA) --- 40nm transistor level simulation with 60dB gain</li><br>	
+	<li>Designing a Operational Transconductance Amplifier(OTA) --- 45nm transistor level simulation with 60dB gain</li><br>	
 	</article>
 	
-	
+</div>	
 
 </body>	
 </html>
