--- a/programming.html
+++ b/programming.html
@@ -56,7 +56,7 @@
 	<p>Please email me for suggestions or clarifications. </p>
 	<p><h3>Please choose item on left tab menu.</h3></p>
 	
-	<p style="text-align:center"><img alt="" height="533" src="programming.jpg" width="800" /></p>
+	<p style="text-align:center"><img alt="" height="80%" src="programming.jpg" width="100%" /></p>
 	</article>
 </div>	
 
