--- a/programming/Basic_UI_Winform/Basic_UI_Winform.html
+++ b/programming/Basic_UI_Winform/Basic_UI_Winform.html
@@ -49,6 +49,7 @@
 		</ul>
 	</nav>
 	
+<div class="bodyCenter">	
 	<SECTION ID="Wrapper"> 
 	<article>
 	<h3>Winform Basic User Interface(UI)</h3>
@@ -127,7 +128,7 @@
 	
 	
 	</SECTION>
-
+</div>
 </body>	
 </html>
 
