--- a/programming/Calculator/Winform_Calculator.html
+++ b/programming/Calculator/Winform_Calculator.html
@@ -49,7 +49,9 @@
 		</ul>
 	</nav>
 	
+<div class="bodyCenter">	
 	<SECTION ID="Wrapper"> 
+	
 	<article>
 	<h3>Why calculator?</h3>
 	<div align="right"><h6>Updated on July 28th, 2017</h6></div>
@@ -83,7 +85,7 @@
 	
 	
 	</SECTION>
-
+</div>
 </body>	
 </html>
 
