--- a/programming/GIT/GIT.html
+++ b/programming/GIT/GIT.html
@@ -48,7 +48,7 @@
 			<li><a href="../Data_Structure.html">Data Structure</a></li>
 		</ul>
 	</nav>
-	
+<div class="bodyCenter">	
 	<SECTION ID="Wrapper"> 
 	<article>
 	<h3>Why GIT?</h3>
@@ -95,11 +95,11 @@
 	<h3>Tips</h3>
 	<li>Delete the branch once merged to master</li>
 	<li>Write comments in detail using figures such as "-" and "*" along with words "Initial" and "Completed"</li>
-	
+	<li>Push&Pull Request to sync with github online</li>
 	
 	
 	</SECTION>
-
+</div>
 </body>	
 </html>
 
