--- a/programming/Host_Web.html
+++ b/programming/Host_Web.html
@@ -48,7 +48,7 @@
 			<li><a href="Data_Structure.html">Data Structure</a></li>
 		</ul>
 	</nav>
-	
+<div class="bodyCenter">	
 	<SECTION ID="Wrapper"> 
 	<article>
 	<p>
@@ -60,7 +60,7 @@
 	Template Template Template Template Template Template Template Template Template 
 	Template Template Template Template Template Template Template Template Template Template
 	</article>
-	
+</div>	
 	<nav id="topMenu"> 
 	<table border="0" cellpadding="0" cellspacing="0" width="800">
 	
@@ -88,10 +88,45 @@
 			</font>
 		</TD>		
     </TR>
+	
+	
+	<TR> 
+		<TD height="20" colspan="4" valign="top">&nbsp;</TD>
+	</TR>
+	
+	
+	<TR> 
+		<TD valign="top" width="90" rowspan="2">&nbsp;</TD>
+		<TD valign="middle" bgcolor="#339933" height="20" class="header" colspan="2"><font face="Helvetica"><b>TEMPLATE</b></font></TD>
+		<TD width="50" valign="top">&nbsp;</TD>
+	</TR>
+	
+	
+	<TR> 
+		<TD valign="top" height="189" bgcolor="#EDEDED">&nbsp;</TD>
+		<TD valign="top" bgcolor="#EDEDED"><BR>
+		<font face="Helvetica">
+			<h4>
+			<a href="Template.html">Click to view the post</a>
+			</h4>
+			
+			<h5>
+				<ol>
+					<p><li>Template Template Template Template Template</li></p>
+					<p><li>Template Template Template Template Template</li></p>
+					<p><li>Template Template Template Template Template</li></p>
+				</ol>				
+			</h5>
+			</font>
+		</TD>		
+    </TR>
+	
+	
+	
 	</table>
 	</nav>
 	</SECTION>
-	
+
 </body>	
 </html>
 
