--- a/programming/Version_Control.html
+++ b/programming/Version_Control.html
@@ -49,6 +49,7 @@
 		</ul>
 	</nav>
 	
+<div class="bodyCenter">	
 	<SECTION ID="Wrapper"> 
 	<article>
 	<p>
@@ -59,8 +60,9 @@
 	<p> All source files in this website are under control of GIT. This means we could keep track of changes in a file and revert back
 	any mistakes to older versions. It removes the necessity of copying backup zips every time I make changes. It also helps other 
 	users commit their changes to the source file for collaboration.
-	</article>
 	
+	</article>
+</div>	
 	<nav id="topMenu"> 
 	<table border="0" cellpadding="0" cellspacing="0" width="800">
 	
@@ -91,6 +93,7 @@
 	</table>
 	</nav>
 	</SECTION>
+	
 	
 </body>	
 </html>
