--- a/programming/Winform.html
+++ b/programming/Winform.html
@@ -49,12 +49,17 @@
 		</ul>
 	</nav>
 	
-	<SECTION ID="Wrapper"> 
-	<article>
-	<p>Windows forms (Winforms) is a graphical (GUI) class library included as a part of Microsoft .NET Framework, providing
-	a platform to write rich client applications for desktop, laptop, and table PCs (*by Wikipedia). Please choose the post of your interest.</p>
-	</article>
+
 	
+<div class="bodyCenter">		
+	<article>
+	Windows forms (Winforms) is a graphical (GUI) class library included as a part of Microsoft .NET <br>
+	Framework, providing a platform to write rich client applications for desktop, laptop, and table <br>
+	PCs (*by Wikipedia). <p>
+	Please choose the post of your interest.
+	</article>
+</div>	
+
 	<nav id="topMenu"> 
 	<table border="0" cellpadding="0" cellspacing="0" width="800">
 	
@@ -115,7 +120,8 @@
 	
 	</table>
 	</nav>
-	</SECTION>
+	
+
 	
 </body>	
 </html>
