--- a/project.html
+++ b/project.html
@@ -42,9 +42,9 @@
 		<ul>
 			<li><a href="./project/[CYPRESS]_Test_Engineering.pdf">Test Engineering</a></li>
 			<li><a href="./project/template.html">Computer Architecture</a></li>
-			<li><a href="./project/template.html">RF and PA</a></li>
-			<li><a href="./project/template.html">Pipelined CPU</a></li>
-			<li><a href="./project/template.html">OTA</a></li>
+			<li><a href="./project/[KMW]_RF_Power_Amplifier.pdf">RF and PA</a></li>
+			<li><a href="./project/[EE577a]_CPU_Circuit_Design.pdf">Pipelined CPU</a></li>
+			<li><a href="./project/[536a]_OTA_Analog_Circuit_Design.pdf">OTA</a></li>
 		</ul>
 	</nav>
 	
