--- a/programming/Data_Structure.html
+++ b/programming/Data_Structure.html
@@ -48,7 +48,7 @@
 			<li><a href="Data_Structure.html">Data Structure</a></li>
 		</ul>
 	</nav>
-	
+<div class="bodyCenter">	
 	<SECTION ID="Wrapper"> 
 	<article>
 	<p>
@@ -62,7 +62,7 @@
 	Template Template Template Template Template Template Template Template Template 
 	Template Template Template Template Template Template Template Template Template Template
 	</article>
-	
+</div>		
 	<nav id="topMenu"> 
 	<table border="0" cellpadding="0" cellspacing="0" width="800">
 	
@@ -93,7 +93,7 @@
 	</table>
 	</nav>
 	</SECTION>
-	
+
 </body>	
 </html>
 
