--- a/programming/Design_Web.html
+++ b/programming/Design_Web.html
@@ -48,7 +48,7 @@
 			<li><a href="Data_Structure.html">Data Structure</a></li>
 		</ul>
 	</nav>
-	
+<div class="bodyCenter">	
 	<SECTION ID="Wrapper"> 
 	<article>
 	<p>
@@ -63,7 +63,7 @@
 	Template Template Template Template Template Template Template Template Template 
 	Template Template Template Template Template Template Template Template Template Template
 	</article>
-	
+</div>	
 	<nav id="topMenu"> 
 	<table border="0" cellpadding="0" cellspacing="0" width="800">
 	
