--- a/resume.html
+++ b/resume.html
@@ -119,7 +119,7 @@
 						<li>Git version control system to keep track of changes</li>
 					</ul>
 				</li>
-			</ol>
+			</ol>			
 		</div>
 	</div>
 	
@@ -129,13 +129,16 @@
 	<div class="margin50"></div>
 	<div class="margin50"></div>
 	<div class="margin50"></div>
+	<div class="margin50"></div>
+	<div class="margin50"></div>
+	
 	
 	<div class="section0">
 		<div title="Refer to Programming Reference Menu">
 		<a href="./programming.html"><h2>Skills</h2></a>
-			<font color="red"><li>Fundamentals of Intergrated Circuit(IC) Architecture, Programming(C++, Python)></li>
+			<font color="TEAL"><li>Fundamentals of Intergrated Circuit(IC) Architecture, Programming(C++, Python)</li>
 			<li>SW&HW Tools: Visual Studio, Cadence Virtuoso(Circuit Design and Simulation),<br>
-			MATLAB, Oscilloscope, Network/Signal Analyzer(RF)</li>
+			JMP, MATLAB, Oscilloscope, Network/Signal Analyzer(RF)</li>
 			<li>Others: Winform(C# .NET), Web Application(HTML,CSS)</li>
 			<li>Program Algorithms. Data Structure</li>
 			</font>
