--- a/about_me.html
+++ b/about_me.html
@@ -223,7 +223,7 @@
 			> Many people, I feel, work to make money for their own lives. (Nothing wrong, it's okay)<br><br>
 			> Not brave enough to leave their safety zones and accept new challenges.<br><br>
 			> The purpose of engineering is to make lives significantly better with technologies.<br><br>
-			> YOLO, I wish that my life and time would be devoted to achieve the purpose of engineering.<br><br>
+			> I wish that my life would be devoted to achieve the purpose of engineering.<br><br>
 			</h5>
 		</font>
 		</TD>		
@@ -232,6 +232,8 @@
 	
 	</table>
 	</nav>
+	
+	
 	
 </body>	
 </html>
