--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
 			</h4>
 			<h5>
 			
-			<li>Current Location : Shreveport, LA</li><br><br>
-			<li>Relocation possible without assistance.</li><br><br>
+			<li>Current Location : Shreveport, LA </li><br><br>
+			<li>Relocation (to Dallas) possible without assistance.</li><br><br>
 			<li>Able to work without any VISA sponsorship.</li><br><br>
 			<li>Looking for Engineering Jobs in Shreveport or Dallas.</li><br><br>
 			<li>Job interests: Test Engineering, Software/Web Developer. Data Analyst.</li><br><br>
