--- a/programming/Data_Structure.html
+++ b/programming/Data_Structure.html
@@ -50,18 +50,19 @@
 	</nav>
 <div class="bodyCenter">	
 	<SECTION ID="Wrapper"> 
+	
 	<article>
-	<p>
+	<h3>Topics to Cover:</h3>
 	Array<br><br>
 	Matrix<br><br>
 	Graph<br><br>
 	Tree<br><br>
 	Queue<br><br>
-	</p>
-	<p> Template Template Template Template Template Template Template Template 
-	Template Template Template Template Template Template Template Template Template 
-	Template Template Template Template Template Template Template Template Template Template
+	<hr>
+	<p> More information coming soon.
+	
 	</article>
+	
 </div>		
 	<nav id="topMenu"> 
 	<table border="0" cellpadding="0" cellspacing="0" width="800">
