--- a/programming/Design_Web.html
+++ b/programming/Design_Web.html
@@ -52,16 +52,37 @@
 	<SECTION ID="Wrapper"> 
 	<article>
 	<p>
-	Wordpress<br><br>
-	Client and Server<br><br>
+	<h3>Topics to Cover:<br></h3>
 	HTML - Framework of Web Page<br><br>
 	CSS - Artwork of Web Page<br><br>
+	Wordpress<br><br>
+	Client and Server<br><br>		
 	JavaScript (Server Side) - Web Script Programming <br><br>
 	PHP (Server Side) - Web Script Programming <br><br>
 	</p>
-	<p> Template Template Template Template Template Template Template Template 
-	Template Template Template Template Template Template Template Template Template 
-	Template Template Template Template Template Template Template Template Template Template
+	<hr>
+	<p>This web page is created using HTML and CSS only. Definitely, it is not the easiest way to create a website. But, it is
+	the fastest way to learn and practice HTML and CSS coding techniques. Since this is a personal blog created mostly for
+	learning purposes, this homepage does its job and I recommend you to make your own if interested in web techniques.
+	<p>Several drawbacks exist on this manual web creation. It requires more works to handle various user web environment. 
+	For example, mobile users may see broken formatting on this website. Some web browers may also have formatting issues. 
+	Using an open source web creation tool such as Wordpress can solve these issues easily. 
+	25% of all sites over the web was created on WordPress for its user easiness. 
+	<p>One important concept on the web is the relationship between client and server.<br>
+	We are the client who request information to the server thru web browers.<br>
+	Server is the host who responds client requests back thru web browers.<br>
+	Note that web browers are the median between client and server.
+	<br>
+	<p>Two main client web techniques are HTML and CSS. HTML is the main framework of web pages. It includes link that client
+		can click on brower leading to another page. It also includes font, color, and graphics. CSS is mainly for artwork of web pages.
+		It includes color, layout, figures and anything that helps client to request info by art style.
+	
+	<p>When asked, server finds the right information stored in its database and provides the info to the client.
+	It is the matter of web security that the info is securely handed to the right client and no one else and with no data corruption.
+	Java and PHP are the main server side programming languages that helps server to effectively respond requests from client.
+	
+	<p>More information coming soon.
+	
 	</article>
 </div>	
 	<nav id="topMenu"> 
