--- a/programming/Host_Web.html
+++ b/programming/Host_Web.html
@@ -51,11 +51,12 @@
 <div class="bodyCenter">	
 	<SECTION ID="Wrapper"> 
 	<article>
-	<p>
+	<h3>Topics to Cover:<br></h3>
 	Domain Name Service(DNS)<br><br>
 	Storage for Web Files<br><br>	
 	Server to Respond DNS Request<br><br>
 	</p>
+	<hr>
 	<p> Template Template Template Template Template Template Template Template 
 	Template Template Template Template Template Template Template Template Template 
 	Template Template Template Template Template Template Template Template Template Template
