--- a/programming/Web_Service.html
+++ b/programming/Web_Service.html
@@ -51,11 +51,12 @@
 <div class="bodyCenter">	
 	<SECTION ID="Wrapper"> 
 	<article>
-	<p>
+	<h3>Topics to Cover:<br></h3>
 	Google Cloud Console<br><br>
 	Amazon Web Service<br><br>
 	Hosting a Static Website<br><br>
 	</p>
+	<hr>
 	<p> Template Template Template Template Template Template Template Template 
 	Template Template Template Template Template Template Template Template Template 
 	Template Template Template Template Template Template Template Template Template Template
