--- a/resume.html
+++ b/resume.html
@@ -115,8 +115,8 @@
 				<li>Personal Web Page</li>
 					<ul>
 						<li>Designed a static website using HTML and CSS tags</li>						
-						<li>Google Cloud Storage and DNS for hosting</li>
-						<li>Git version control system to keep track of changes</li>
+						<li>Google Cloud Storage and DNS for Static Web Hosting</li>
+						<li>Git Version Control System to Keep Track of Changes</li>
 					</ul>
 				</li>
 			</ol>			
