--- a/project.html
+++ b/project.html
@@ -51,8 +51,9 @@
 <div class="bodyCenter">	
 
 	<article>
-	<p>It will be updated soon.</p>
-	<p>This page is intended to show details of projects listed in resume.</p><br>
+	<p>This page is intended to show details of projects listed in resume.</p>
+	<p>Click on menu tabs for project reports. Below is the summary.</p>
+	<br>
 	
 	<li>Test Engineering at Cypress --- ATE manipulation and its principle: Nextest ATE, wafer, furnace</li><br>
 	<li>Computer Architecture at Cypress and USC --- its principle: FLASH, SRAM, USB, GPIO, IMO and I2C</li><br>
